fix: fix z-indexes of second menu

--- a/src/app/flight-selection/components/flight-date-select/flight-date-select.component.scss
+++ b/src/app/flight-selection/components/flight-date-select/flight-date-select.component.scss
@@ -12,16 +12,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: -1;
 
   span {
-    z-index: 2;
+    z-index: 1;
     cursor: pointer;
   }
 }
 
 .cards {
   position: relative;
-  z-index: 1;
+  z-index: 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   grid-template-rows: 1fr;
